spacing issue when line does not begin with chord

--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -43,6 +43,15 @@
           color: $colour-chord;
           font-size: 18px;
           font-weight: bold;
+          &:after {
+            content: '\200b';
+          }
+          &:empty {
+            color: $colour-primary;
+            &:after {
+              content: ".";
+            }
+          }
         }
       }
     }
